--- a/design-studio.html
+++ b/design-studio.html
@@ -51,17 +51,17 @@
                             <div class="collapse navbar-collapse flex-row-reverse" id="mega-menu">
                                 <ul class="nav navbar-nav">
                                     <li class="dropdown" data-animation="fadeIn">
-                                        <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Home </a>
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Inicio </a>
                                         <ul class="dropdown-menu no-border-radius">
-                                            <li><a href="index.html"> Creative Agency </a></li>
-                                            <li><a href="design-studio.html"> Design Studio </a></li>
-                                            <li><a href="digital-agency.html"> Digital Agency </a></li>
-                                            <li><a href="construction.html"> Construction </a></li>
-                                            <li><a href="corporate.html"> Corporate </a></li>
+                                            <li><a href="index.html"> Definición de Artesanías </a></li>
+                                            <li><a href="design-studio.html"> Artesanías de Colombia </a></li>
+                                            <li><a href="digital-agency.html"> Misión </a></li>
+                                            <li><a href="construction.html"> Vision </a></li>
+                                            <li><a href="corporate.html"> Objetivo general </a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown" data-animation="fadeIn">
-                                        <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Features </a>
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Caracteristicas </a>
                                         <ul class="dropdown-menu  no-border-radius">
                                             <li class="dropdown dropdown-right dropdown-parent">
                                                 <a class="sub-marker" href="#">Header Styles <i class="icon-ios-more icn-right"></i></a>
@@ -166,7 +166,7 @@
                                         </ul>
                                     </li>
                                     <li class="dropdown" data-animation="fadeIn">
-                                        <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Portfolio </a>
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Portafolio </a>
                                         <ul class="dropdown-menu no-border-radius">
                                             <li class="dropdown dropdown-left dropdown-parent">
                                                 <a class="sub-marker" href="#"> No Sidebar <i class="icon-ios-more icn-right"></i></a>
@@ -203,7 +203,7 @@
                                         </ul>
                                     </li>
                                     <li class="dropdown dropdown-full-width-g" data-animation="fadeIn">
-                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" data-title="Pages">Elements </a>
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" data-title="Pages">Elementos </a>
                                         <div class="dropdown-menu no-border-radius no-padding" data-adjust="2">
                                             <div class="row row-autoheight no-gutters">
                                                 <div class="col-lg-3 col-autoheight clearfix">
@@ -266,10 +266,10 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <a href="about.html"> About </a>
+                                        <a href="about.html"> Sobre </a>
                                     </li>
                                     <li>
-                                        <a href="team.html"> Team </a>
+                                        <a href="team.html"> equipo </a>
                                     </li>
                                     <li class="dropdown right-dropdown" data-animation="fadeIn">
                                         <a class="dropdown-toggle" data-toggle="dropdown" href="index.html" data-title="Home"> Blog </a>
@@ -285,7 +285,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="contact.html"> Contact </a>
+                                        <a href="contact.html"> Contacto </a>
                                     </li>
                                     <li class="dropdown cart-list margin-0-sm">
                                         <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);"><span class="hidden-lg-up"> Shopping Cart </span><i class="custom-icon-cart m-marker"></i></a>
@@ -296,7 +296,7 @@
                                                     <li class="row">
                                                         <div class="col-lg-4 col-md-4 col-sm-5 col">
                                                             <div class="img">
-                                                                <a href="#"><img src="img/img-02.jpg" alt="image description"></a>
+                                                                <a href="#"><img src="img/img-02.11.jpg" alt="image description"></a>
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-8 col-md-8 col-sm-7 col">
@@ -308,7 +308,7 @@
                                                     <li class="row">
                                                         <div class="col-lg-4 col-md-4 col-sm-5 col">
                                                             <div class="img">
-                                                                <a href="#"><img src="img/img-02.jpg" alt="image description"></a>
+                                                                <a href="#"><img src="img/img-02.12.jpg" alt="image description"></a>
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-8 col-md-8 col-sm-7 col">
@@ -446,10 +446,10 @@
                         <div class="container">
                             <div class="inner-wrapper">
                                 <div class="block-heading text-right">
-                                    <h3 class="block-top-heading text-white">BEST EVER DESIGN</h3>
-                                    <h2 class="block-main-heading text-white">WEB DESIGN</h2>
-                                    <span class="block-sub-heading text-white">We really love what we do & our work on every project truly reflects that.</span>
-                                    <div class="divider"><img src="img/divider-white.png" alt="images description"></div>
+                                    <h3 class="block-top-heading text-white">arte y diseño</h3>
+                                    <h2 class="block-main-heading text-white">visión</h2>
+                                    <span class="block-sub-heading text-white">En 2022 Artesanías Colombia será reconocida a nivel nacional por su liderazgo en el desarrollo productivo.</span>
+                                  <div class="divider"><img src="img/divider-white.png" alt="images description"></div>
                                 </div>
                             </div>
                         </div>
@@ -903,7 +903,7 @@ MATERIA PRIMA: CORTEZA <br>
                                             <span class="custom-icon-smile"></span>
                                         </div>
                                         <h3 class="number">220</h3>
-                                        <div class="text text-uppercase">SATISFIED CLIENTS</div>
+                                        <div class="text text-uppercase">Clientes satisfechos</div>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-3">
@@ -912,7 +912,7 @@ MATERIA PRIMA: CORTEZA <br>
                                             <span class="custom-icon-award"></span>
                                         </div>
                                         <h3 class="number">720</h3>
-                                        <div class="text text-uppercase">AWARDS WON</div>
+                                        <div class="text text-uppercase">pREMION GANADOS</div>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-3">
@@ -921,7 +921,7 @@ MATERIA PRIMA: CORTEZA <br>
                                             <span class="custom-icon-celebrate"></span>
                                         </div>
                                         <h3 class="number">707</h3>
-                                        <div class="text text-uppercase">MILESTONES MET</div>
+                                        <div class="text text-uppercase">METAS CONSEGUIDAS</div>
                                     </div>
                                 </div>
                             </div>
@@ -930,10 +930,10 @@ MATERIA PRIMA: CORTEZA <br>
                     <section class="content-block">
                         <div class="container">
                         <div class="block-heading bottom-space text-center">
-                                <h3 class="block-top-heading">VALUE FOR MONEY</h3>
-                                <h2 class="block-main-heading">PRICING OPTIONS</h2>
-                                <span class="block-sub-heading">Plenty more pricing options under featurs.</span>
-                                <div class="divider"><img src="img/divider.png" alt="images description"></div>
+                                <h3 class="block-top-heading">ARTE Y CULTURA</h3>
+                                <h2 class="block-main-heading">ARTESANOS EN COLOMBIA</h2>
+                                <span class="block-sub-heading">Laboratorios de innovación y diseño&nbsp;</span>
+                          <div class="divider"><img src="img/divider.png" alt="images description"></div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-6">
@@ -988,10 +988,10 @@ MATERIA PRIMA: CORTEZA <br>
                     <section class="content-block bg-gray-light">
                         <div class="container">
                             <div class="block-heading bottom-space text-center">
-                                <h3 class="block-top-heading">HEAR FROM</h3>
-                                <h2 class="block-main-heading">TESTIMONIALS</h2>
-                                <span class="block-sub-heading">We always listen to our clients.</span>
-                                <div class="divider"><img src="img/divider.png" alt="images description"></div>
+                                <h3 class="block-top-heading">basado en&nbsp;</h3>
+                                <h2 class="block-main-heading">Diseño Colombia</h2>
+                                <span class="block-sub-heading">diseño artesanal</span>
+                              <div class="divider"><img src="img/divider.png" alt="images description"></div>
                             </div>
                             <div class="testimonial-container text-center">
                                 <div class="owl-carousel testimonial-slide" id="waituk-owl-slide-3">
@@ -1003,7 +1003,8 @@ MATERIA PRIMA: CORTEZA <br>
                                             <div class="text-wrap">
                                                 <h2>Natalie Fullick</h2>
                                                 <span class="designation bottom-m-space">CEO - ENVATO INC.</span>
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                                                <p>“Los productos artesanales son los producidos por artesanos, ya sea totalmente a
+mano, o con la ayuda de herramientas manuales o incluso de medios mecánicos </p>
                                             </div>
                                         </div>
                                     </div>
