--- a/construction.html
+++ b/construction.html
@@ -456,7 +456,7 @@
                                                 <span class="content-sub-title">irradiar vidas, es nuestro fin.</span>
                                                 <div class="post-meta clearfix">
                                                     <div class="post-link-holder">
-                                                        <a href="#">Learn More <span class="fa fa-arrow-right"><span class="sr-only">&nbsp;</span></span></a>
+                                                        <a href="#">Leer más... <span class="fa fa-arrow-right"><span class="sr-only">&nbsp;</span></span></a>
                                                     </div>
                                                     <div class="post-social text-right">
                                                         <ul class="social-network social-small">
