--- a/construction.html
+++ b/construction.html
@@ -474,11 +474,11 @@
                     <section class="content-block pt-0">
                         <div class="container">
                             <div class="block-heading text-center">
-                                <h3 class="content-title">COMPANIES WORKED WITH IN PAST</h3>
-                                <h2 class="block-main-heading text-black">BRANDS BEHIND</h2>
+                                <h3 class="content-title">ACOMPAÑANDO CADA PASO DE TU LUZ </h3>
+                                <h2 class="block-main-heading text-black">VELAS ROXINE</h2>
                             </div>
                             <div class="description text-center container-md">
-                                <p>Delightful unreserved impossible few estimating men favourable see entreaties. She propriety immediate was improving. He or entrance humoured likewise moderate. Much nor game son say feel. Fat make met can must form into gate. Me we offending prevailed discovery. </p>
+                                <p>Convierte todos los momentos de la vida en algo más con productos que realzan cada experiencia. Con velas, aceites naturales, tenemos la manera apropiada de llenar de fragancias todos tus espacios favoritos. FELICIDAD. Tenemos una fragancia para eso. </p>
                             </div>
                             <div class="logo-list text-center">
                                 <div class="row">
