--- a/element-lightbox.html
+++ b/element-lightbox.html
@@ -378,7 +378,7 @@
                                                         <div class="custom-icon-plus"><span class="sr-only">&nbsp;</span></div>
                                                     </div>
                                                     <div class="info">
-                                                        <h2 class="content-title">Awesome Project</h2>
+                                                        <h2 class="content-title">Ver más</h2>
                                                     </div>
                                                 </div>
                                             </div>
@@ -394,7 +394,7 @@
                                                         <div class="custom-icon-plus"><span class="sr-only">&nbsp;</span></div>
                                                     </div>
                                                     <div class="info">
-                                                        <h2 class="content-title">Awesome Project</h2>
+                                                        <h2 class="content-title">Ver más</h2>
                                                     </div>
                                                 </div>
                                             </div>
@@ -410,7 +410,7 @@
                                                         <div class="custom-icon-plus"><span class="sr-only">&nbsp;</span></div>
                                                     </div>
                                                     <div class="info">
-                                                        <h2 class="content-title">Awesome Project</h2>
+                                                        <h2 class="content-title">Ver más</h2>
                                                     </div>
                                                 </div>
                                             </div>
@@ -425,7 +425,7 @@
                                             <div class="lightbox-img mt-2"> <img src="img/portfolio-21.jpg" alt="images description"></div>
                                         </div>
                                         <div class="col-md-8">
-                                            <h3 class="content-title mt-4">Image Title</h3>
+                                            <h3 class="content-title mt-4">Engaña a su nieta para salirse con la suya</h3>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
                                         </div>
@@ -439,7 +439,7 @@
                                             <div class="lightbox-img mt-2"> <img src="img/portfolio-22.jpg" alt="images description"></div>
                                         </div>
                                         <div class="col-md-8">
-                                            <h3 class="content-title mt-4">Image Title</h3>
+                                            <h3 class="content-title mt-4">Humilló a aseadora sin saber que ella le daría una lección</h3>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
                                         </div>
@@ -453,8 +453,7 @@
                                             <div class="lightbox-img mt-2"> <img src="img/portfolio-23.jpg" alt="images description"></div>
                                         </div>
                                         <div class="col-md-8">
-                                            <h3 class="content-title mt-4">Image Title</h3>
-                                            <p>ola</p>
+                                            <h3 class="content-title mt-4">Oficial de policía usa su fuerza brutamente contra ciudadanos inocentes</h3>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
                                         </div>
                                     </div>
@@ -469,6 +468,10 @@
         <!-- footer of the pagse -->
         <footer class="footer">
             <div class="content-block footer-main text-center">
+                <div>
+ 
+                </div>
+
                 <div class="container">
                     <div class="waituk_newsletter-form">
                         <form action="#" method="post">
@@ -477,30 +480,30 @@
                                     <input type="email" class="form-control" placeholder="Email Address">
                                 </div>
                                 <input type="submit" class="btn btn-trans-dark-gray" value="Subscribe">
-                            </fieldset>
+                            </fieldset> 
                         </form>
                     </div>
-                    <div class="content-block footer-info">
+                    <div class="footer-info">
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="holder">
                                     <span class="icon custom-icon-phone"></span>
-                                    <p> Call Us On</p>
-                                    <p><a class="footer-link" href="tel:9779851108896">977 985 1108896</a></p>
+                                    <p>Contactanos</p>
+                                    <p><a class="footer-link" href="tel:9779851108896">+57 321 1231231</a></p>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="holder">
                                     <span class="icon custom-icon-email"></span>
-                                    <p> Email Us At</p>
-                                    <p>Email at <a href="mailto:waituk.net">Waituk.net</a></p>
+                                    <p> Comunícate</p>
+                                    <p><a href="mailto:waituk.net">Contact@visualvideo.com</a></p>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="holder">
                                     <span class="icon custom-icon-pin"></span>
-                                    <p> Visit Office</p>
-                                    <p>707 Ive Corner - London</p>
+                                    <p> Nuestras oficinas</p>
+                                    <p>KR 34#151-87</p>
                                 </div>
                             </div>
                         </div>
