--- a/construction.html
+++ b/construction.html
@@ -663,7 +663,7 @@
             </div>
             <div class="footer-bottom text-center">
                 <div class="container">
-                    <p>Copyright 2016 - Roxine - Multi Purpose Theme by Waituk </p>
+                    <p>Copyright 2022 - Roxine - velas by Karol </p>
                 </div>
             </div>
         </footer>
