--- a/construction.html
+++ b/construction.html
@@ -642,10 +642,10 @@
                         <div class="col-md-5">
                             <div class="footer-nav inline-nav text-center">
                                 <ul>
-                                    <li><a href="#">Company</a></li>
-                                    <li><a href="#">Services</a></li>
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">Contact</a></li>
+                                    <li><a href="#">Inicio</a></li>
+                                    <li><a href="#">Asesoría</a></li>
+                                    <li><a href="#">Foro</a></li>
+                                    <li><a href="#">Contacto</a></li>
                                 </ul>
                             </div>
                         </div>
