--- a/construction.html
+++ b/construction.html
@@ -475,7 +475,7 @@
                         <div class="container">
                             <div class="block-heading text-center">
                                 <h3 class="content-title">ACOMPAÑANDO CADA PASO DE TU LUZ </h3>
-                                <h2 class="block-main-heading text-black">VELAS ROXINE</h2>
+                                <h2 class="block-main-heading text-white">VELAS ROXINE</h2>
                             </div>
                             <div class="description text-center container-md">
                                 <p>Convierte todos los momentos de la vida en algo más con productos que realzan cada experiencia. Con velas, aceites naturales, tenemos la manera apropiada de llenar de fragancias todos tus espacios favoritos. FELICIDAD. Tenemos una fragancia para eso. </p>
@@ -617,10 +617,10 @@
                     <section class="content-block consult-block bg-primary">
                         <div class="container">
                             <div class="inner-wrapper text-center">
-                                <h3 class="block-top-heading text-white">BEST EVER DESIGN</h3>
-                                <h2 class="bottom-m-space text-white">Thinking of starting a project with us?</h2>
+                                <h3 class="block-top-heading text-white">ESTADO DE MI PEDIDO</h3>
+                                <h2 class="bottom-m-space text-white">¿Dónde se encuentra mi pedido?</h2>
                                 <div class="btn-container">
-                                    <a href="#" class="btn btn-small-font btn-trans-white">GET CONSULTATION</a>
+                                    <a href="#" class="btn btn-small-font btn-trans-white">CONSULTAR</a>
                                 </div>
                             </div>
                         </div>
