--- a/about.html
+++ b/about.html
@@ -348,11 +348,11 @@
                         <div class="centered">
                             <div class="container">
                                 <div class="visual-text visual-center">
-                                    <h1 class="visual-title visual-sub-title">About Business</h1>
+                                    <h1 class="visual-title visual-sub-title">Studio Ghibli</h1>
                                     <div class="breadcrumb-block">
                                         <ol class="breadcrumb">
                                             <li class="breadcrumb-item"><a href="index.html"> Home </a></li>
-                                            <li class="breadcrumb-item active"> About Company </li>
+                                            <li class="breadcrumb-item active"> About Studio Ghibli </li>
                                         </ol>
                                     </div>
                                 </div>
@@ -366,10 +366,13 @@
                     <section class="content-block">
                         <div class="container text-center">
                             <div class="heading bottom-space">
-                                <h2>Dream. <span>Create.</span> Deliver</h2>
+                                <h2> Hayao<span> Miyazaki</span></h2>
                             </div>
                             <div class="description">
-                                <p>Delightful unreserved impossible few estimating men favourable see entreaties. She propriety immediate was improving. He or entrance humoured likewise moderate. Much nor game son say feel. Fat make met can must form into gate. Me we offending prevailed discovery. </p>
+                                <p><h4>“Para crear una película, me gusta arrojar una red al océano de <br> mi imaginación y ver qué es lo que saco”</h4></p>
+								<br>
+								<p> Hayao Miyazaki se dedica a dibujar con un lápiz, pero además de ser el director de películas más exitoso de Japón es una de las figuras públicas más respetadas del país, como se demostró en una conferencia en Tokio en la que habló de filosofía, de la educación de los niños o del nacionalismo. Este hombre de pelo y barba blancas, gafas de pasta gruesa y voz grave es el cerebro que ha creado algunos de los iconos de cultura popular que más han calado entre los japoneses, como <i>Mi Vecino Totoro</i> o el cerdo piloto <i>Porco Rosso.</i></p>
+							
                             </div>
                         </div>
                     </section>
@@ -384,10 +387,8 @@
                                     </div>
                                     <div class="col col-lg-6">
                                         <div class="text-wrap">
-                                            <h3>Digital experts working for you.</h3>
-                                            <p>Chapter too parties its letters nor. Cheerful but whatever ladyship disposed yet judgment. Lasted answer oppose to ye months no esteem.</p>
-                                            <p>Branched is on an ecstatic directly it. Put off continue you denoting returned juvenile. Looked person sister result mr to. Replied demands charmed do viewing ye colonel to so.</p>
-                                            <p>Decisively inquietude he advantages insensible at oh continuing unaffected of. </p>
+                                            <h3>El Viaje de Chihiro</h3>
+                                            <p>La mejor película de Ghibli es esta adaptación inconfesa de 'Alicia en el País de las Maravillas' (algo que ya se tanteó en 'Totoro': el Gatobús era casi una declaración de intenciones), pero cambiando los zumbados victorianos por un auténtico maremoto de espíritus de todos los tamaños y actitudes. La niña protagonista, Chihiro, descubre que el Más Allá es lo más parecido a un trabajo de 8 a 17 en una casa de baños para espectros, donde debe trabajar mientras se las ingenia para salvar a sus padres, que han sido transformados en cerdos. Desconcertante y excesiva, rebosante de imaginación y de ternura, 'El viaje de Chihiro' es el resumen perfecto de todo lo que hace grande a Studio Ghibli.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -399,10 +400,8 @@
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="text-wrap">
-                                            <h3>Bring a perfectionist.</h3>
-                                            <p>New had happen unable uneasy. Drawings can followed improved out sociable not. Earnestly so do instantly pretended. </p>
-                                            <p>See general few civilly amiable pleased account carried. Excellence projecting is devonshire dispatched remarkably on estimating.</p>
-                                            <p>Decisively inquietude he advantages insensible at oh continuing unaffected of. </p>
+                                            <h3>Mi Vecino Totoro</h3>
+                                            <p>La película para todos los públicos definitiva de Ghibli es este maravilloso canto a la fantasía que cuenta la historia de dos hermanas que entran en contacto con un mundo de criaturas monstruosas y amigables, como el tremendo Totoro. Una celebración optimista de la familia (literal y figurada) y de la imaginación infantil, y que cuenta con algunas de las criaturas más adorables de toda la zoología Ghibli. Un clásico y un pasaporte familiar perfecto para el universo Ghibli.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -414,10 +413,8 @@
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="text-wrap">
-                                            <h3>Leave no stone unterned.</h3>
-                                            <p>New had happen unable uneasy. Drawings can followed improved out sociable not. Earnestly so do instantly pretended. </p>
-                                            <p>See general few civilly amiable pleased account carried. Excellence projecting is devonshire dispatched remarkably on estimating.</p>
-                                            <p>Decisively inquietude he advantages insensible at oh continuing unaffected of. </p>
+                                            <h3>El Castillo Ambulante</h3>
+                                            <p>Una de las películas más discutidas de Miyazaki, si no la que más, debido a un argumento al que no le importa ser confuso y sus múltiples giros de tono y trama. Sin embargo, la imaginería de la película es poderosísima, empezando por el increíble castillo del título, donde vive un brujo mitad pájaro que se enamora de una joven que ha sido transformada en anciana por una maldición. La fe absoluta del film en la imagen fantástica pura como abstracción y como unidad mínima de la narración es lo que te hará caer a sus pies o verla con cierto distanciamiento.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -427,10 +424,10 @@
                     <section class="content-block quotation-block black-overlay-6 parallax" data-stellar-background-ratio="0.55">
                         <div class="container">
                             <div class="inner-wrapper">
-                                <h3 class="block-top-heading text-white">BEST EVER DESIGN</h3>
-                                <h2 class="text-white">Time to enhance your web presence!</h2>
+                                <h4 class="text-white">"Hay muchos fantasmas hambrientos a nuestro alrededor; muertos por la guerra, la enfermedad o el hambre, y a nadie le importa. ¿Que sufres una maldición, dices? <br> El mundo está maldito."</h4>
+								<h5 class="block-top-heading text-white">La Princesa Mononoke</h5>
                                 <div class="btn-container">
-                                    <a href="#" class="btn btn-primary">GET QUOTATION</a>
+                                    <a href="#" class="btn btn-primary">Ver más frases</a>
                                 </div>
                             </div>
                         </div>
